Add custom Noto Sans font

--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,19 @@
 @import "tailwindcss";
+
+@font-face {
+    font-family: 'Noto Sans';
+    src: url('/src/assets/fonts/NotoSans-VariableFont_wdth\,wght.ttf') format(truetype);
+    font-weight: 100 900;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Noto Sans';
+    src: url('/src/assets/fonts/NotoSans-Italic-VariableFont_wdth\,wght.ttf') format(truetype);
+    font-weight: 100 900;
+    font-style: italic;
+}
+
+@theme {
+    --font-primary: 'Noto Sans', 'sans-serif'
+}
