--- a/src/style.css
+++ b/src/style.css
@@ -19,3 +19,11 @@
 }
 
 @custom-variant dark (&:where(.dark, .dark *));
+
+[data-category-state="active"] {
+    @apply bg-red-700 hover:bg-red-400 active:bg-red-700 text-white px-5 py-2 rounded-full font-medium shadow-md text-lg cursor-pointer dark:bg-red-500 dark:active:bg-red-500 dark:text-slate-800;
+}
+
+[data-category-state="inactive"] {
+    @apply bg-white hover:bg-gray-100 active:bg-gray-50 text-slate-800 px-5 py-2 rounded-full font-medium shadow-md text-lg cursor-pointer dark:bg-slate-800 dark:hover:bg-slate-700 dark:active:bg-slate-800 dark:text-gray-50 dark:ring dark:ring-gray-50/50;
+}
